--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!--CSS-->
     <link rel="stylesheet" href="style.css">
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap" rel="stylesheet">
+    <!--jQuery-->
     <script src="jquery-3.6.3.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <title>Igor Sousa</title>
 
 </head>
 <body>
-    <header id="telaInicial">
-        <div id="apresentacao"><h1></h1></div>
-        <p id="continue">Continuar</p>
+    <header>
+        <div><h1 id="apresentacao"></h1></div>
+        <p class="w3-padding w3-display-bottommiddle">Continuar!<br><img src="imagens/Seta.png" alt="Seta apontando para baixo"></p>
     </header>
     <main>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae rem exercitationem unde deleniti accusamus aspernatur consequuntur perspiciatis dolores. Unde soluta fugiat minima debitis eius eveniet placeat eligendi reiciendis eaque pariatur.
+        <section id="sectionApresentacao">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia enim consequatur, odit laborum assumenda voluptatem alias vitae neque delectus earum animi? Quis incidunt modi necessitatibus cum quidem magni quos voluptatem!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis beatae nihil ipsum quis minus veritatis laboriosam, totam cum qui iste asperiores nulla dolor magni minima quisquam officia ullam harum. Ut?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore id blanditiis doloribus nulla reiciendis corrupti aspernatur numquam eveniet praesentium ipsam quae, laborum fugiat ea quos iure quod maxime cupiditate consectetur.lore</p>
+            
+            <aside id="foto"><img src="imagens/19726_543529992346715_844506313_n.jpg" alt="Foto 3x4"></aside>
+        </section>
     </main>
 </body>
 </html>
